2003-12-21  Gary Thomas  <gary@mlbassoc.com>

	* src/adder.S: Only clear caches on non-RAM startup modes.  This fixes
	some problems when using network debug connections (messing with the
	caches seems to confuse the CPM)

2003-12-10  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_adder.cdl: System clock was using wrong frequency
	(time base).  On this platform, it's configured to use the raw
	OSCLK which is a constant 10MHz, not the higher speed PLL based 
	clocks.

2003-12-08  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_adder.cdl: 
	HAL_PLATFORM_CPU now defined by MPC8xx variant CDL.

2003-09-21  Gary Thomas  <gary@mlbassoc.com>

	* misc/adderII_redboot_ROMRAM.ecm: 
	* misc/adder_redboot_ROMRAM.ecm:  Adjust for changes in RedBoot
	template - DNS now must be enabled manually.

2003-08-28  Gary Thomas  <gary@mlbassoc.com>

	* src/redboot_linux_exec.c: Obsolete file - removed.

	* src/plf_redboot_linux_exec.c: New file - platform specifics
	for booting Linux kernel from RedBoot.

	* cdl/hal_powerpc_adder.cdl: Linux booting from RedBoot is 
	now supported at the architecture level.  Changes to support 
	architecture/platform layering.

2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_powerpc_adder.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2003-04-16  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_aux.c (hal_platform_init): Set up GPIO bits according
	to platform type.

2003-03-31  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_adder.cdl: Enable use of SCC3 on AdderII.

2003-03-24  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_ROMRAM.ecm: Remove.

	* misc/adder_redboot_ROMRAM.ecm: 
	* misc/adderII_redboot_ROMRAM.ecm: New file(s), distinguish platforms.

	* src/hal_aux.c: 
	* src/adder.S: 